--- a/configDir/server.cfg
+++ b/configDir/server.cfg
@@ -1,7 +1,7 @@
 // see https://community.bistudio.com/wiki/server.cfg
 
-hostName = "Your Server Name";
-password = "playerpass";
+hostName = "[CNTO] Carpe Noctem Private Test Server";
+password = "cnto";
 passwordAdmin = "adminpass";
 
 // automatic port forward if your router supports UPnP
