Fix issue #6, #8, #9, and mod loading bug

--- a/configDir/server.cfg
+++ b/configDir/server.cfg
@@ -1,7 +1,7 @@
 // see https://community.bistudio.com/wiki/server.cfg
 
-hostName = "[CNTO] Carpe Noctem Private Test Server";
-password = "cnto";
+hostName = "Local Test Server";
+password = "localpass";
 passwordAdmin = "adminpass";
 
 // automatic port forward if your router supports UPnP
